# dbd-player-insights

./: .env.example  .gitignore  LICENSE  Makefile  pyproject.toml
.github/workflows/: dbt_ci.yml  dbt_deploy.yml  terraform_plan.yml
airflow/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
airflow/config/: airflow.cfg.override
airflow/dags/: data_generator_backfill.py  dbt_daily_run.py  dbt_freshness_check.py  snowflake_cost_monitor.py
dashboard/: app.py  requirements.txt
dashboard/.streamlit/: config.toml
dashboard/pages/: 01_player_kpis.py  02_match_analytics.py  03_revenue.py  04_cost_monitor.py
dashboard/utils/: charts.py  snowflake_conn.py
dbt/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml.example
dbt/analyses/: query_performance_audit.sql  snowflake_cost_analysis.sql  warehouse_utilization.sql
dbt/macros/: cents_to_dollars.sql  date_spine.sql  generate_schema_name.sql  incremental_filter.sql  retention_cohort.sql
dbt/models/: sources.yml
dbt/seeds/: seed_killers.csv  seed_maps.csv  seed_perks.csv  seed_survivors.csv  (+1 more)
docs/: architecture.md  data-dictionary.md  onboarding.md  snowflake-cost-guide.md
generator/: README.md  __main__.py  cli.py  config.py
grafana/: .env.example  docker-compose.yml
infra/: Makefile  README.md
quality/: sla_config.yml
scripts/: export_lineage.sh  run_full_pipeline.sh  seed_s3.sh  setup_snowflake.sh
terraform/: main.tf  outputs.tf  pipes_snowflake.tf  resource_monitors_snowflake.tf  roles_snowflake.tf  s3_aws.tf  stages_snowflake.tf  terraform.tfvars.example  variables.tf
(+87 files in other folders)
